--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Responsive Personal Portfolio Website Design</title>
+    <title>Ranches Portfolio Website</title>
 
     <!-- Box Icons -->
     <link
@@ -168,3 +168,4 @@
           <script src="script.js"></script>
   </body>
 </html>
+
