--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ranches Portfolio Website</title>
+    <title>Responsive Personal Portfolio Website Design</title>
 
     <!-- Box Icons -->
     <link
@@ -38,15 +38,15 @@
         <h3>Hello, It's Me</h3>
         <h1>John Ejie</h1>
         <h3>And I am a <span>Software Engineer!</span></h3>
-        <p>Passionate about creating innovative and efficient software solutions.</p>
-        <p>Dedicated to turning complex problems into simple, user-friendly applications.</p>
+        <p>Computer Science graduate majoring in Software Engineering, passionate about ensuring software quality and delivering smooth, reliable user experiences.</p>
+        <p>Dedicated to testing, analyzing, and improving systems to create efficient, high-performing applications.</p>
         <div class="social-media">
           <a href="#"><i class="bx bxl-facebook"></i></a>
           <a href="#"><i class="bx bxl-twitter"></i></a>
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
           <a href="#"><i class="bx bxl-linkedin"></i></a>
         </div>
-     <a href="files/cv.pdf" download="John_Ejie_Resume.pdf" class="btn">Download Resume</a>
+       <a href="files/resume.pdf" download="John_Ejie_Resume.pdf" class="btn">Download Resume</a>
       </div>
 
       <div class="home-image">
@@ -62,7 +62,7 @@
       <div class="about-content">
         <h2 class="heading">About <span>Me</span></h2>
         <h3>Software Engineer</h3>
-        <p>Computer Science graduate with a strong foundation in software engineering, IT systems, and web development...</p>
+        <p>Computer Science graduate with a strong foundation in software engineering, IT systems, and quality assurance...</p>
        <a href="about.html" class="btn">Read More</a>
       </div>
     </section>
@@ -73,22 +73,22 @@
       <div class="experience-container">
         <div class="experience-box">
           <i class="bx bx-code-alt"></i>
-          <h3>Web Developer Intern</h3>
-          <p>Designed and developed the company’s profile website, improving digital presence.</p>
+          <h3>Quality Assurance Lead Intern</h3>
+          <p>Led a team of QA testers in planning, executing, and automating test processes to ensure software quality, identify defects, and deliver reliable, high-performing web applications</p>
          <a href="experience.html" class="btn">Read More</a>
         </div>
 
         <div class="experience-box">
           <i class="bx bx-laptop"></i>
-          <h3>IT Administrator Intern</h3>
-          <p>Led IT-related projects such as system upgrades, migrations, and implementations.</p>
+          <h3>Quality Assurance Specialist Intern</h3>
+          <p>Performed comprehensive software testing, identified and documented defects, and collaborated with developers to ensure high-quality, reliable, and user-focused application performance.</p>
           <a href="experience.html" class="btn">Read More</a>
         </div>
 
         <div class="experience-box">
           <i class="bx bx-code-block"></i>
           <h3>IT Support Intern</h3>
-          <p>Delivered website maintenance and IT support services to ensure reliability.</p>
+          <p>Supported IT operations by maintaining system performance, resolving technical issues with developers and QA teams, and assisting in updates for in-house web platforms.</p>
             <a href="experience.html" class="btn">Read More</a>
         </div>
       </div>
@@ -104,7 +104,6 @@
           <div class="projects-layer">
             <h4>Barbershop Reservation</h4>
             <p>A web app allowing clients to easily book and manage appointments.</p>
-            <a href="#"><i class="bx bx-link-external"></i></a>
           </div>
         </div>
 
@@ -168,6 +167,3 @@
           <script src="script.js"></script>
   </body>
 </html>
-
-
-
