--- a/experience.html
+++ b/experience.html
@@ -25,43 +25,55 @@
   <!-- Experience Section -->
   <section class="experience" style="padding-top: 12rem;">
     <h2 class="heading">My <span>Professional Experience</span></h2>
-
     <!-- Team Leader -->
     <div class="experience-container">
       <div class="experience-box">
         <i class="bx bx-group"></i>
-        <h3>Team Leader – IT Department Intern</h3>
-        <p><strong>Ollopa Corporation | April 2025 – August 2025</strong></p>
+        <h3>Quality Assurance Specialist Intern</h3>
+        <p><strong>Ollopa Corporation | December 2024 - Febuary 2025</strong></p>
         <ul style="text-align: left; margin-top: 1rem;">
-          <li>Supervised a team of IT interns and ensured smooth daily operations.</li>
-          <li>Led planning and development of the company website, enhancing digital presence and usability.</li>
-          <li>Guided team members in troubleshooting and problem-solving, improving workflow efficiency.</li>
-          <li>Enforced adherence to IT standards and best practices.</li>
-          <li>Conducted QA reviews and performance evaluations, improving team efficiency and project outcomes.</li>
+          <li>Tested and validated 3+ web applications, ensuring functionality, usability, and data
+            accuracy.</li>
+          <li>Created and executed test cases; reported and tracked bugs.</li>
+          <li>Collaborated with developers to verify fixes and improve system reliability.</li>
+          <li>Conducted manual and regression tests to ensure stable software performance.</li>
         </ul>
       </div>
 
+
+   
       <!-- IT Admin -->
       <div class="experience-box">
         <i class="bx bx-laptop"></i>
-        <h3>IT Administrator – Intern</h3>
-        <p><strong>Ollopa Corporation | January 2025 – March 2025</strong></p>
+        <h3>Quality Assurance Lead Intern</h3>
+        <p><strong>Ollopa Corporation | April 2025 - July 2025</strong></p>
         <ul style="text-align: left; margin-top: 1rem;">
-          <li>Managed and maintained the company’s IT infrastructure to ensure stable operations.</li>
-          <li>Provided hardware and software support to employees and team members.</li>
-          <li>Trained new members on IT protocols and internal operations, streamlining onboarding.</li>
-          <li>Prepared reports and documentation on system performance and incidents.</li>
+          <li>Led a QA team of 8–10 interns, assigning test cases and reviewing deliverables to ensure
+            consistency and accuracy.</li>
+          <li>Designed and implemented end-to-end test plans for internal web applications, covering
+            functional, usability, and regression testing.</li>
+          <li>Coordinated with developers and IT operations to validate fixes, improving release quality
+            and deployment stability by 25%.</li>
+          <li>Maintained documentation of testing progress, defect reports, and release notes for project
+            tracking and audits.</li>
+            <li>Conducted weekly QA reviews to identify process improvements and enhance overall
+              testing efficiency.</li>
         </ul>
       </div>
 
+
+   
       <!-- Web Developer & IT Support -->
       <div class="experience-box">
         <i class="bx bx-code-alt"></i>
-        <h3>Web Developer & IT Support</h3>
+        <h3>IT Support Intern</h3>
         <p><strong>Ollopa Corporation | November 2024 – December 2024</strong></p>
         <ul style="text-align: left; margin-top: 1rem;">
-          <li>Designed and developed the company’s profile website, improving digital presence.</li>
-          <li>Delivered website maintenance and IT support services to ensure platform reliability.</li>
+          <li>Supported IT operations for an e-commerce and e-manufacturing company, ensuring
+            smooth performance of internal systems and web applications.</li>
+          <li>Collaborated with developers and QA teams to resolve technical issues and improve system
+            reliability.</li>
+            <li>Documented incidents and assisted in deploying updates for in-house web platforms.</li>
         </ul>
       </div>
     </div>
