--- a/about.html
+++ b/about.html
@@ -22,15 +22,18 @@
   <section class="about" id="about-page">
     <div class="about-content" style="padding-top: 10rem;">
       <h2 class="heading">More About <span>Me</span></h2>
-      <h3>Software Engineer | Problem Solver | IT Specialist</h3>
+      <h3>Quality Assurance Specialist | Software Tester | Problem Solver</h3>
       <p>
-        I'm John Ejie, a Computer Science graduate and passionate Software Engineer focused on solving real-world problems using technology. I have experience in full-stack development, IT system administration, and building scalable web applications. I love transforming ideas into user-friendly and efficient software.
+        I'm John Ejie, a Computer Science graduate passionate about ensuring software quality and delivering reliable user experiences. My focus is on identifying issues before they reach production, improving product performance, and contributing to seamless, bug-free software releases.
       </p>
       <p>
-        During my academic and internship years, I’ve worked on various projects ranging from IT infrastructure maintenance to creating biometric authentication systems using computer vision.
+        During my internship, I gained hands-on experience in manual testing, bug tracking, and QA documentation for web-based systems, including e-commerce and enterprise platforms. I collaborated with developers to ensure product stability and consistency, applying structured testing processes aligned with SDLC and Agile methodologies.
       </p>
       <p>
-        I believe in continuous learning, and I’m currently exploring DevOps, cloud computing, and AI/ML to level up my skillset further.
+        I’m continuously learning and currently exploring test automation, API testing, and DevOps practices to expand my QA capabilities and eventually grow into a Senior QA Engineer role.
+      </p>
+      <p>
+        I take pride in being detail-oriented, analytical, and driven by quality — ensuring every product I test performs flawlessly for its users.
       </p>
       <a href="index.html#about" class="btn">Back</a>
     </div>
