--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
           <a href="#"><i class="bx bxl-instagram-alt"></i></a>
           <a href="#"><i class="bx bxl-linkedin"></i></a>
         </div>
-       <a href="files/CV-Ranches.pdf" download="John_Ejie_Resume.pdf" class="btn">Download Resume</a>
+       <a href="files/CV_Ranches.pdf" download="John_Ejie_Resume.pdf" class="btn">Download Resume</a>
       </div>
 
       <div class="home-image">
@@ -167,4 +167,5 @@
           <script src="script.js"></script>
   </body>
 </html>
+
 
